# selenium_course_pytest

./: README.md  pyproject.toml
tests/: conftest.py  test_items.py
