[tool.poetry]
name = "selenium-course-pytest"
version = "0.1.0"
description = ""
authors = ["SergeantCoder"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.3.5"
selenium = "^4.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
